--- a/SwiftKeychainWrapper.xcodeproj/xcshareddata/xcschemes/TestHostApp.xcscheme
+++ b/SwiftKeychainWrapper.xcodeproj/xcshareddata/xcschemes/TestHostApp.xcscheme
@@ -20,14 +20,39 @@
                ReferencedContainer = "container:SwiftKeychainWrapper.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "9694C2B91A66097F005B3030"
+               BuildableName = "SwiftKeychainWrapperTests.xctest"
+               BlueprintName = "SwiftKeychainWrapperTests"
+               ReferencedContainer = "container:SwiftKeychainWrapper.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      language = ""
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "9694C2B91A66097F005B3030"
+               BuildableName = "SwiftKeychainWrapperTests.xctest"
+               BlueprintName = "SwiftKeychainWrapperTests"
+               ReferencedContainer = "container:SwiftKeychainWrapper.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
@@ -45,6 +70,7 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      language = ""
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
